[metadata]
name=netlify_deployer
version=0.0.5
python_requires = >=3.6
author=Cyryl Płotnicki
author_email=cyplo@cyplo.net
summary=Package to help with deploying Netlify
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
url=https://github.com/cyplo/netlify_deployer
install_requires=
        requests
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[files]
packages =
    netlify_deployer

[wheel]
universal = 1

